oscen-macros/tests/ui/multi_parse_error_in_connection_block.stderr
error: expected `-`
  --> tests/ui/multi_parse_error_in_connection_block.rs:12:12
   |
12 |         s1 ~> out;
   |            ^

error: expected identifier
  --> tests/ui/multi_parse_error_in_connection_block.rs:14:15
   |
14 |         s3 -> ;
   |               ^
